@@ -2,6 +2,7 @@ Version 7.2.4
 -------------
 
 - Add (manual) support for breadcrumbs to event objects.
+- Add ``sendEvent(EventBuilder)`` method which calls builder helpers before building and sending the ``Event``.
 
 Version 7.2.3
 -------------
